<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LazyFlickr</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="refresh_button_text">Refresh</string>
    <string name="initial_list_title">Loading Flickr Feed&#8230;</string>
    <string name="stub_image_description">Loading Thumbnail</string>
    <string name="item_starting_text">Loading Image&#8230;</string>
    <string name="loading_text">Loading Flickr Feed&#8230;</string>
    <string name="clear_cache_button">Clear Cached Data</string>
    <string name="max_photos_title">Max Number of Photos</string>
    <string name="max_photos_description">Set the maximum number of Flickr photos that can be stored.</string>
    <string name="category_about">About</string>
    <string name="category_cache">Photo Cache</string>
    <string name="tag_search_hint">Search Tags</string>
    <string name="empty_search_text">Search Flickr for Some Tags!</string>

</resources>